<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MusicPlayer</string>
    <string name="dialog_close_app" tools:ignore="ExtraTranslation">Close application?</string>
    <string name="yes_dialog" tools:ignore="ExtraTranslation">Yes</string>
    <string name="no_dialog" tools:ignore="ExtraTranslation">No</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="loopMode">Loop</string>
    <string name="repeatMode">Repeat</string>
    <string name="randomMode">Random</string>
    <string name="sorting">Sorting</string>
    <string name="add_playlist">Add playlist</string>
    <string name="rating_of">Unlike</string>
    <string name="rating_on">Like</string>
    <string name="select_soundtracks">Select songs for playlist:</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="back">BACK</string>
    <string name="create">CREATE</string>
    <string name="save">SAVE</string>
    <string name="music">Music</string>
    <string name="playlist">Playlist</string>
    <string name="sort_by_date_of_addition">Sort by date of addition</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_listening_frequency">Sort by listening frequency</string>
    <string name="count_of_soundtracks">"COUNT OF SOUNDTRACKS :   "</string>
    <string name="delete_playlist">delete playlist</string>
    <string name="edit_playlist">edit playlist</string>
</resources>