<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/create_playlist"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="30dp"
            android:hint="@string/playlist_name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp"
            android:gravity="center_vertical"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            app:errorContentDescription="*************************"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:layout_editor_absoluteX="9dp">

        <Button
            android:id="@+id/close_dialog"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/ic_close"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/save_playlist"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_save"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>






